WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263403
AX: AXIsolatedTree::createEmptyContent takes too long.
https://bugs.webkit.org/show_bug.cgi?id=263403
Summary
AX: AXIsolatedTree::createEmptyContent takes too long.
Andres Gonzalez
Reported
2023-10-19 13:57:28 PDT
This method should create just 2 AXIsolatedObjects, but it is still taking too long.
Attachments
Patch
(5.05 KB, patch)
2023-10-19 14:27 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(10.26 KB, patch)
2023-10-23 12:12 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(10.28 KB, patch)
2023-10-23 15:47 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-19 13:57:39 PDT
<
rdar://problem/117224271
>
Andres Gonzalez
Comment 2
2023-10-19 14:27:53 PDT
Created
attachment 468279
[details]
Patch
chris fleizach
Comment 3
2023-10-19 14:40:59 PDT
Comment on
attachment 468279
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=468279&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:99 > + m_emptyContentTree = true;
where do we set this to false?
Andres Gonzalez
Comment 4
2023-10-19 16:38:58 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 468279
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=468279&action=review
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:99 > > + m_emptyContentTree = true; > > where do we set this to false?
Never, the empty content tree is replaced with the full tree, not populated.
Andres Gonzalez
Comment 5
2023-10-23 12:12:52 PDT
Created
attachment 468304
[details]
Patch
Tyler Wilcock
Comment 6
2023-10-23 14:24:23 PDT
Comment on
attachment 468304
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=468304&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:369 > + bool m_emptyContentTree { false };
Thoughts on m_isEmptyContentTree to match the member function, and to satisfy the style guide?
https://webkit.org/code-style-guidelines/#names-bool
> Precede boolean values with words like “is” and “did”.
Andres Gonzalez
Comment 7
2023-10-23 15:47:35 PDT
Created
attachment 468308
[details]
Patch
EWS
Comment 8
2023-10-24 05:49:45 PDT
Committed
269708@main
(329677707e94): <
https://commits.webkit.org/269708@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468308
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug